footer spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ a {
   margin-bottom: 0;
   color: #000;
   font-family: iskra, serif;
-  background-color: #fff;
+  background-color: #fcbd00;
   width: 50%;
   opacity: 1;
   border-radius: 0 8px 0 0;
@@ -204,7 +204,7 @@ a {
 
 .why-b {
   padding: 1rem;
-  background-color: #fff;
+  background-color: #fcbd00;
   width: 50%;
   opacity: 1;
   border-radius: 0 8px 8px 0;
@@ -386,14 +386,16 @@ a {
 
 .footer-distributed{
   background-color: #be48b0;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
   width: 100%;
-  font: "Iskra" 16px sans-serif;
+  font: "Iskra" 16px serif;
   text-align: left;
   padding: 50px 60px 40px;
+  padding-bottom: 0;
+  padding-top: 20px;
   overflow: hidden;
   letter-spacing: 1px;
+  vertical-align: center;
 }
 
 .oops {
@@ -401,33 +403,10 @@ a {
   margin-bottom: 2rem;
 }
 
-/* Footer left */
-
-.footer-distributed .footer-left{
-  float: left;
-}
-
-
-/* Footer links */
-
-.footer-distributed .footer-links{
-  color:  #ffffff;
-  margin: 0 0 10px;
-  padding: 0;
-}
-
 .footer-distributed .footer-links a{
   display:inline-block;
   line-height: 1.8;
   text-decoration: none;
-  color: inherit;
-}
-
-.footer-distributed .footer-company-name{
-  color: #8f9296;
-  font-size: 14px;
-  font-weight: normal;
-  margin: 0;
 }
 
 .footer-distributed .footer-icons a{
@@ -443,7 +422,7 @@ a {
 
   margin-right: 10px;
   margin-left: 10px;
-  margin-bottom: 0;
+  margin-bottom: 40px;
   margin-top: 40px;
 }
 
@@ -777,7 +756,7 @@ h2 {
   }
 
   .pad-first {
-    margin-top: 90px;
+    margin-top: 100px;
   }
 
   .banner-img {
